hphp/hack/test/typecheck/new_inference/eager_solve/nullable_predicate_lambda.php.like_types.exp
File "nullable_predicate_lambda.php", line 28, characters 9-28:
Invalid argument (Typing[4323])
File "nullable_predicate_lambda.php", line 7, characters 40-41:
Some type constraint(s) are violated here
File "nullable_predicate_lambda.php", line 7, characters 40-41:
Tv is a constrained type parameter
File "nullable_predicate_lambda.php", line 15, characters 3-16:
Expected Traversable<[unresolved]>
File "nullable_predicate_lambda.php", line 7, characters 40-41:
But got dynamic
